--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ansi-colors": "^4.1.1",
     "body-parser": "^1.14.1",
     "browser-sync": "^2.27.9",
+    "chart.js": "^3.7.1",
     "client-sessions": "^0.8.0",
     "cookie-parser": "^1.4.6",
     "cross-spawn": "^7.0.2",
@@ -38,6 +39,7 @@
     "marked": "^4.0.10",
     "moment": "^2.29.3",
     "notifications-node-client": "^5.1.0",
+    "numeral": "^2.0.6",
     "nunjucks": "^3.2.1",
     "portscanner": "^2.1.1",
     "require-dir": "^1.0.0",
